--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ url: https://www.xudadi.com/
 email: admin@xudadi.com
 logo: "/assets/img/def/logo.jpg"
 fav: "/favicon.ico"
-title: 许大大博客
-description: 许大大的个人网站
+title: 许大地博客
+description: 许大地的个人网站
 
 defaults:
  -
