--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ highlighter: rouge
 gems: [jekyll-paginate]
 encoding: utf-8
 paginate: 8
-paginate_path: "page:num"
+paginate_path: "num" #page:num#
 markdown: kramdown
 kramdown:
   syntax_highlighter: rouge
