--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ markdown: kramdown
 kramdown:
   syntax_highlighter: rouge
 
-name: 许大地博客
+name: 许大地
 bio: xudadi.com
 url: https://www.xudadi.com/
 email: admin@xudadi.com
