--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ logo: "/assets/img/def/logo.jpg"
 fav: "/favicon.ico"
 title: 许大地博客
 description: 许大地的个人网站
+archive_dir: archives # 归档文件夹
+category_dir: categories # 分类文件夹
 
 defaults:
  -
