--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,8 @@ navs:
   - 
     href: https://weibo.com/xudadi811
     label: 微博
-    external_link: true # 在新标签中打开外部链接
+    external_link: 
+     enable:true
   -
     href: /blog/archives
     label: 归档
